tests/gen-test/test_out/swap-macro.txt
error: type or module not found
  --> swap-macro\root.ctl:81:47
   |
81 |     fn start(s: ^Self, lexer: ^MacroLexer) -> Option[^Self]
   |                                               ^^^^^^ this does not exist
   |
   = info: queried 'Option'

error: type or module not found
  --> swap-macro\root.ctl:82:46
   |
82 |     fn next(s: ^Self, lexer: ^MacroLexer) -> Option[MacroToken]
   |                                              ^^^^^^ this does not exist
   |
   = info: queried 'Option'

error: type or module not found
  --> swap-macro\root.ctl:88:47
   |
88 |     fn start(s: ^Self, lexer: ^MacroLexer) -> Option[^Self] {
   |                                               ^^^^^^ this does not exist
   |
   = info: queried 'Option'

error: function or module not found
  --> swap-macro\root.ctl:13:47
   |
13 |     fn next(ml: ^MacroLexer) -> MacroToken => ctl_next_token(ml)
   |                                               ^^^^^^^^^^^^^^ this does not exist
   |
   = info: queried 'ctl_next_token'

error: function or module not found
  --> swap-macro\root.ctl:87:29
   |
87 |     fn new -> ^Self => cast(malloc(sizeof(Self)))
   |                             ^^^^^^ this does not exist
   |
   = info: queried 'malloc'

error: function or module not found
  --> swap-macro\root.ctl:91:26
   |
91 |     fn drop(s: ^Self) => free(cast(s))
   |                          ^^^^ this does not exist
   |
   = info: queried 'free'

error: missing spec functions
  --> swap-macro\root.ctl:87:1
   |
...  |
92 | | }
   | |_^ this impl block does not implement all required functions
   |
   = help: functions that are missing: new, clear, drop

info: mir repr of functions:


error: no entry points found
 = help: add '#[entry]' to a function that should take this role

